@@ -1,3 +1,8 @@
+2012-03-01  Chris Buccella  <buccella@linux.vnet.ibm.com>
+
+	* interopProvider.c:
+	[ 3496061 ] IndicationSubscription May Be Undeletable
+
 2012-02-29 Narasimha Sharoff <nsharoff@us.ibm.com>
 
 	* brokerUpc.c
